HelloUltraviolet/Fixtures/RejectedSource/Patterns/TuplePatternArity/Expected.uv
//! Expected diagnostic metadata for the TuplePatternArity rejected-source specimen.

expectedDiagnostic("", "rule.17.Pat-Tuple-R-Arity-Err")
